[package]
name = "netstat_exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] } # Add this line
